Reworked task1 slightly to make it more similar to task2, also commented and cleaned up the code in both tasks